--- a/utah-state/index.qmd
+++ b/utah-state/index.qmd
@@ -35,11 +35,11 @@ bb <- ReadBib("./CV.bib", check = T)
 <!-- Error Rates and Scientific Foundations in Forensics -->
 3. Perception & Statistical Graphics
 <!-- Career Award project -->
-4. Machine Learning for Forensics
-<!-- Algorithms and Perception -->
 
-## Introduction
 
+# Introduction 😶‍🌫️☁️🌎
+
+## 🏫 Education
 ::: {.nolines}
  | 
 :---: | :------------------------------ 
@@ -48,7 +48,7 @@ bb <- ReadBib("./CV.bib", check = T)
 2015 | Ph.D., Statistics<br/>[Dissertation: [[Perception of Statistical Graphics](https://srvanderplas.github.io/Dissertation/SusanVanderplas-DissertationFinalVersion.pdf)]{.emph}]{.small}
 :::
 
-## Introduction
+## 💼 Career Timeline
 
 ::: {.nolines}
  | 
@@ -59,7 +59,9 @@ bb <- ReadBib("./CV.bib", check = T)
 2024-26 | Assoc. Professor, UNL 
 :::
 
-## Recent Work
+## 📊 Recent Work 
+
+::: {.r-fit-text}
 
 ```{r}
 #| label: graphics-pubs
@@ -93,8 +95,11 @@ PrintBibliography(newpubs, .opts = list(sorting = "ydnt", no.print.fields = c("n
 - A Guide to Designing Experiments to Test Statistical Graphics (WIRE Computational Statistics)     
 [Robinson, Hofmann, Vanderplas. 2025]{.small}
 
-## Recent Work
+:::
 
+## 🔬 Recent Work
+
+::: {.r-fit-text}
 - Methodological problems in every black-box study of forensic firearm comparisons (Law, Probability, and Risk)     
 [Cuellar, Vanderplas, Luby, Rosenblum. 2024]{.small}
 
@@ -104,8 +109,31 @@ PrintBibliography(newpubs, .opts = list(sorting = "ydnt", no.print.fields = c("n
 - Hidden Multiple Comparisons Increase Forensic Error Rates (PNAS)     
 [Vanderplas, Carriquiry, Hofmann. 2024]{.small}
 
+:::
 
-## Funded Grants
+
+## 🐣 Coming Soon!
+
+::: {.r-fit-text}
+
+Forensics:
+
+- `courtR` package for legal transcript studies
+- `highlightR` package for conserved text analysis
+- Assessing Algorithm Use and Testimony for Firearms and Toolmark Analysis
+- What Comes Next: A Constructive Vision for Firearms and Toolmarks Analysis
+
+Graphics: 
+
+- `ggdibbler` package and paper - uncertainty visualization
+- Experiential Learning with Statistical Graphics: Writing, Reflection, and Suspense
+- Assessing Computer Vision models for Gestalt Perception
+
+:::
+
+## 💵 Funded Grants
+
+::: {.r-fit-text}
 
 - 2025, NSF CAREER, What Do You See? Perception, Decisions, and Statistical Graphics ($550,000)
 
@@ -117,11 +145,12 @@ PrintBibliography(newpubs, .opts = list(sorting = "ydnt", no.print.fields = c("n
 
 - 2019, NSF, Overcoming the Rural Data Deficit to Improve Quality of Life and Community Services in Smart & Connected Small Communities ($1.5 mil total, $123,445 sub-award)
 
+:::
 
 
-# CSI: Statistics (and the fundamentals of Science) {#csi-stats}
+# CSI: Statistics<br> [& Scientific Foundations]{.emph .darkblue .slightly-small .fragment} {#csi-stats background-image="../images/dna.jpg" background-opacity="50%" background-size="cover" .center}
 
-##  {background-image="../images/dna.jpg" background-opacity="50%" background-size="cover"}
+---
 
 ::: {.r-stack}
 
@@ -152,19 +181,281 @@ As these cases happened, scientists started asking how this all went so wrong? W
 
 :::
 
+## Hidden Multiple Comparisons Increase Forensic Error Rates 
 
-## Wire Cuts
+Proceedings of the National Academy of Sciences, 2024
+
+[Joint work with [**Heike Hofmann**]{.darkorange} and [**Alicia Carriquiry**]{.darkpurple}]{.emph}
+
+
+::: columns
+::: {.column width="30%"}
+{{< qrcode https://www.pnas.org/doi/full/10.1073/pnas.2401326121  width=300 height=300 >}}
+
+PNAS Paper Link
+:::
+::: {.column width="10%" .r-fit-text}
+:::
+::: {.column width="60%" .r-fit-text}
+
+This work was partially funded by the Center for Statistics and Applications in Forensic Evidence (CSAFE) through Cooperative Agreements 70NANB15H176 and 70NANB20H019 between NIST and Iowa State University, [which includes activities carried out at Carnegie Mellon University, Duke University, University of California Irvine, University of Virginia, West Virginia University, University of Pennsylvania, Swarthmore College and University of Nebraska, Lincoln.]{.small}
+
+:::
+:::
+
+
+
+## A Specific Case -- Jimmy Genrich
 
 ::: {layout-ncol=2}
 
-![[Source](https://www.thenation.com/article/archive/the-crisis-of-american-forensics/)](../images/TheNation20180226-Genrich.png){fig-alt="A screenshot of an article by Meehan Crist and Tim Requarth from The Nation (Feb 26, 2018 issue). The title reads 'Forensic Science Put Jimmy Genrich in Prison for 24 Years. What if It Wasn’t Science?'. A mugshot is shown below the article title." height=750 width=auto}
+![](../images/TheNation20180226-Genrich.png){fig-alt="A screenshot of an article by Meehan Crist and Tim Requarth from The Nation (Feb 26, 2018 issue). The title reads 'Forensic Science Put Jimmy Genrich in Prison for 24 Years. What if It Wasn’t Science?'. A mugshot is shown below the article title. Article url: https://www.thenation.com/article/archive/the-crisis-of-american-forensics/" height=750}
 
 ::: fragment
-![[Source](https://www.cpr.org/2023/07/10/judge-orders-new-trial-for-grand-junction-man-convicted-in-90s-pipe-bombings/)](../images/CPR-new-trial.png){fig-alt="A Colorado Public Media story by Tom Hesse from July 10, 2023, titled 'Judge orders new trial for Grand Junction man convicted in '90s pipe bombings'. A picture of the Mesa County Justice Center is shown below the article title." height=750 width=auto}
+![](../images/CPR-new-trial.png){fig-alt="A Colorado Public Media story by Tom Hesse from July 10, 2023, titled 'Judge orders new trial for Grand Junction man convicted in '90s pipe bombings'. A picture of the Mesa County Justice Center is shown below the article title. Article url:  https://www.cpr.org/2023/07/10/judge-orders-new-trial-for-grand-junction-man-convicted-in-90s-pipe-bombings/" height=750 width=auto}
 :::
 
 :::
 
-<!-- https://www.cpr.org/2023/07/10/judge-orders-new-trial-for-grand-junction-man-convicted-in-90s-pipe-bombings/ -->
-<!-- https://www.thenation.com/article/archive/the-crisis-of-american-forensics/ -->
+
+## Motivation 
+
+::: {.smaller}
+
+> At trial, O’Neil testified that tools like the wire cutters found in Genrich’s residence were the only tools that could have been used to make the pipe bombs.
+> “Agent O’Neil opined that the three of Mr. Genrich’s tools were the **only tools in the world that could have made certain marks found on pieces from the four bombs**,” Judge Gurley wrote in Monday's opinion.
+
+> O’Neil was asked specifically at trial what he meant by the phrase “to the exclusion of any other tool.”
+> “That the individual jaw, the location within that jaw on that particular side, was identified as having cut the wire in question to a degree of certainty to exclude any other tool,” he said, according to court transcripts referenced in Gurley’s decision.
+> O’Neil said this was **true of needle-nosed pliers used on the bomb, slip-joint pliers, as well as the wire cutter**. 
+:::
+
+[Source](https://www.cpr.org/2023/07/10/judge-orders-new-trial-for-grand-junction-man-convicted-in-90s-pipe-bombings/) (emphasis added)
+
+
+
+## Personal Motivation
+
+![My house has $\approx$ 982 cm of (easily accessible) blade surface which might be used to cut wires. My dad has $\approx$ 2243 cm of blade surface in his shop. No one in either location is a craftsperson.](../images/Shop-annotated.png){fig-alt="An annotated picture of a messy garage, showing all of the tools which could conceivably make striated toolmarks, including visegrips, pliers, bolt cutters, pry bars, electrical tools, razor blades, hammers, tin snips, saws, and more." width="100%"}
+
+
+## Constructive Scientific Proof<br>[Proof from first principles]{.emph .meddarkblue .smaller}
+
+::: columns
+::: {.column .r-fit-text width="70%"}
+- Understand 
+    - how tools make marks
+    - tool wear over time
+    - tool manufacturing processes
+    - tool/material interaction
+    - mark type/frequency distribution
+- Track
+    - Frequency of tools in a local population
+:::
+::: {.column width="30%"}
+[😓]{.extrabig .fragment}
+:::
+:::
+
+::: {.notes}
+
+
+Scientifically, this could be boiled down to a combination of a statistics problem and a materials engineering problem: we need to understand the material surface (in this case, wire, which is likely copper or aluminium, and, if it's insulated, we can probably get away with assuming the interior core is undamaged). 
+
+We also need to understand the tool -- how many cutting surfaces does the tool have? How do they interact? At what angle? How much force is required, and does additional force produce different results?
+
+The manufacturing process for the tool's operational surface is usually what forensics examiners claim gives each tool a unique set of markings. So, we have to understand how the tool is manufactured, where those markings might come from, and what types of markings are likely to be analyzed -- the relative frequency of different types, etc.
+
+Then, we need to understand interaction effects -- how do changes in tool and substrate material change the marks that are produced?
+
+You can see how the number of factors very quickly gets out of control, even before we start tracking the number of tools that exist locally.  
+Establishing the discipline from first principles is ... difficult, to say the least. You could probably do it with a combination of time, stubbornness, and statistical inference, but there is always a chance that a new manufacturing method will be developed that will produce new types/classes of markings. 
+
+Ultimately, it seems likely that even with statistical inference, establishing the toolmark discipline from first  principles is not possible, and it certainly doesn't seem to be an effective use of time and funding. 
+
+:::
+
+
+
+## Wire Cuts
+
+::: {layout=[[70,30],[100]] layout-valign="bottom"}
+
+![CAT5 crimper with wire cutter](../images/wire_cutter.png)
+
+![Cut wires](../images/razor_wire_cut_sizes_ann.png)
+
+![Digital scan of blade cut and wire cut](../images/Blade-Wire-Cut-Scan-Render.png)
+:::
+
+## 📐 A Different Angle on the Problem
+
+- $e^{(1)}$: error rate for a single comparison
+- $e^{(N)}$: overall error rate, $N$ comparisons
+
+- Calculate $N$: \# comparisons between tool and evidence
+
+- [Ultimate question]{.emph .darkpurple}:     
+What does $e^{(1)}$ need to be for $e^{(N)}$ to be low^[Low enough will be determined by courts⚖️, not statisticians... 🫣]?
+
+## Structural Parameters
+
+![](../images/Surface_Counts.png){fig-alt="A profile image of the blades of each of four types of tools - wedge-type cuts (guillotine/wire cutters), scissors, pliers, and blades. All but pliers have two cutting surfaces, but the angles of each surface differ. Pliers have 4 cutting surfaces." width="80%" style="margin-left:auto;margin-right:auto;"}
+
+
+- Bladed Surfaces: $s \in \{2, 4\}, 1 \leq i \leq s$
+
+- Cut Surfaces (on one wire): $w \in \{1, 2\}, 1\leq j\leq w$
+
+
+
+## Visual Examination
+
+
+::: {.columns}
+::: {.column width="80%"}
+- Test cuts made along the blade(s) of the tool
+
+- At least $N_{ij} = b_i/d_j$ comparisons for each blade surface $i$ and cut wire surface $j$
+
+- Manual alignment: estimate the minimum comparisons
+
+:::
+::: {.column width="20%"}
+
+![](../images/comparison-scope-rearrange.png){fig-alt="An image of a comparison microscope, which allows viewing two samples simultaneously in order to align them." width="18%" style="position:absolute;top:0;right:20px;"}
+:::
+:::
+
+
+![](../images/number of comparisons.svg){width="100%" fig-alt="A diagram showing a blade cut (long, thin) with striations compared to a wire cut (semi-circle shape, short) aligned with the blade cut. There are multiple non-overlapping positions along the blade cut where the wire cut could fit, and each is shown with an empty hemisphere." style="position:absolute;bottom:0px;left:20px;"}
+
+## Visual Examination
+
+
+
+![](../images/number of comparisons.svg){width="100%" fig-alt="A diagram showing a blade cut (long, thin) with striations compared to a wire cut (semi-circle shape, short) aligned with the blade cut. There are multiple non-overlapping positions along the blade cut where the wire cut could fit, and each is shown with an empty hemisphere." style="position:absolute;top:40%;left:20px;"}
+
+Adj. comparisons are non-overlapping $\Rightarrow$ "independent"^[There are peak-valley dependence structures in profile data, but conditioning on tool/material/manufacturing, we would **expect** statistical independence between adjacent comparisons]
+
+
+## Algorithmic Comparison
+
+Scans -> Cross Section -> "Signature"    
+(remove gross topology)
+
+![Cross-correlation is used to align signature from blade cut surface to signature from wire cut surface. Image credit: Heike Hofmann](../images/alignment-crop-sm.gif){fig-alt="An animated gif of a wire cross-section sliding along a composite cross section generated from a blade cut."}
+
+
+
+## Number of Comparisons
+
+```{r}
+nc <- floor(15000/0.645 - 2000/0.645 + 1)
+Ncomp1 <- format(nc, big.mark=",")
+Ncomp2 <- format(nc*2, big.mark=",")
+```
+
+ &nbsp;           | Minimum (Manual) | Maximum (Algorithm)
+----------------- | ----------- | ------------------
+blade size        | $b=15 \text{mm}$   | $b=15000 \mu \text{m}$
+cutting surfaces  | $s=2$/blade | $s=2$/blade
+wire size         | $d=2 \text{mm}$    | $d=2000 \mu \text{m}$
+wire surface      | $w=1$       | $w=1$
+resolution        |             | $r=0.645 \mu \text{m/px}$
+\# per side       | 7.5         | `{r} Ncomp1`
+\# total          | 15          | `{r} Ncomp2`
+
+
+This assumes a single wire and a single possible tool.
+
+
+## So How Bad Is the Problem?
+
+For error rate $e$ and $n$ comparisons
+
+$$P(\text{no false positive errors}) = 1 - \left(1 - e\right)^n$$ 
+
+::: fragment
+
+[Simple probability 🎲 strikes again!]{.emph .darkcerulean}
+
+:::
+
+## So How Bad Is the Problem?
+
+- Estimated false positive error rate for striated comparisons from bullets and firing pins: 0.45 - 7.24%. 
+
+  - [**Pooled estimate**: 2%]{.emph .darkgreen}
+
+  - Not enough error rate studies on wires
+  - Bullets have additional structure to facilitate alignment
+  - Wires have additional complexity 
+      - shorter sequences
+      - more dependence on angle
+
+[$\Rightarrow$ **2% is a generous estimate...**]{.emph .meddarkblue .fragment}
+
+## So How Bad Is the Problem?
+
+To keep the overall false positive rate under 10%...
+
+![](../images/table-fpr-family.png){fig-alt="A table showing the family wise false discovery rate for N comparisons using several different estimates of striated comparison error rates. When the FDR is 7%, over 50% of 10-comparison samples would be expected to have a false positive. When the FDR is 2%, over 18% of 10-comparison samples would be expected to have a false positive. Additional columns are provided giving the expected frequency of 100 and 1000 comparisons under different error rates. The final column provides the maximum number of comparisons at the specified error rate which can be performed to keep the family wise false positive error rate under 10%."}
+
+[2% Error -> 5 total comparisons.]{.emph .meddarkblue .fragment}
+
+[Minimum of 15 required to do even a simple wire-cut analysis.]{.emph .meddarkblue .fragment}
+
+## Conclusions
+
+- Wire cut forensics are not scientifically sound using current analysis methods
+
+::: fragment
+
+but... this problem shows up in database searches, too!
+
+- IAFIS (Integrated Automated Fingerprint ID System)
+- NIBIN (Ballistics Database)
+- NDIS (National DNA ID System) and CODIS (Combined DNA ID System)
+- PDQ (Paint Data Query)
+- FISH (Forensic ID System for Handwriting)
+
+:::
+
+## Conclusions
+
+::: incremental
+- Automatic intelligence algorithms are not a good substitute for investigative work
+
+- Example: Oregon
+  - 3 firearms examiners for the state
+  - Most firearms evidence run through NIBIN first
+  - Promising leads forwarded to examiners for manual assessment
+  
+:::
+
+[This is a setup that could generate false-positives by design!]{.cerulean .emph .fragment}
+
+## Conclusions
+
+::: incremental
+
+- Examiners should report and the defense should require
+
+  - [overall length/area of surfaces generated during the examination $(b)$]{.small}
+  - [total consecutive length/area of recovered evidence $(d)$]{.small}
+
+
+- Studies relating length/area of comparison surface to error rates are essential!
+
+  - [No available black-box error rate for wire cuts]{.small}
+  - [Studies should be difficult, like casework!]{.small}
+
+- Any database search used at any stage of the process should be disclosed along with
+
+  - [$N$ items in the database used for comparison]{.small}
+  - [Number of results returned as 'similar' (top 20? top 5?)]{.small}
+  - [Protocols for confirmatory assessment]{.small}
+
+:::
 
